--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "express": "^4.15.2",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-css-modules": "^4.1.0",
