enable production build for react

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack",
+    "deploy:dev:setup": "pm2 deploy pm2.config.js dev setup",
     "deploy:dev": "pm2 deploy pm2.config.js dev",
+    "deploy:prod:setup": "pm2 deploy pm2.config.js prod setup",
     "deploy:prod": "pm2 deploy pm2.config.js prod"
   },
   "repository": {
