--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack",
-    "deploy:dev:setup": "pm2 deploy pm2.config.js dev setup",
-    "deploy:dev": "pm2 deploy pm2.config.js dev",
-    "deploy:prod:setup": "pm2 deploy pm2.config.js prod setup",
-    "deploy:prod": "pm2 deploy pm2.config.js prod"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -47,8 +43,6 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "express": "^4.15.2",
-    "compression": "^1.6.2",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-css-modules": "^4.1.0",
