--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "faker": "^4.1.0",
     "axios": "^0.15.3",
+    "faker": "^4.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
+    "react-infinite": "^0.10.0",
     "react-router-dom": "^4.0.0",
     "react-virtualized": "^9.4.1",
     "recharts": "^0.21.2",
