--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-infinite": "^0.10.0",
     "react-router-dom": "^4.0.0",
     "react-virtualized": "^9.4.1",
+    "react-waypoint": "^5.2.1",
     "recharts": "^0.21.2",
     "semantic-ui": "^2.2.9",
     "semantic-ui-react": "^0.67.1"
