--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-infinite": "^0.10.0",
+    "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
+    "react-router-redux": "^4.0.8",
     "react-virtualized": "^9.4.1",
     "react-waypoint": "^5.2.1",
     "recharts": "^0.21.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.9",
     "semantic-ui-react": "^0.67.1"
   }
