refactor containers and components for redux

--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "better-react-spinkit": "^2.0.0-6",
     "faker": "^4.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-infinite": "^0.10.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
-    "react-router-redux": "^4.0.8",
+    "react-spinkit": "^2.1.1",
+    "react-star-rating-component": "^1.2.4",
     "react-virtualized": "^9.4.1",
     "react-waypoint": "^5.2.1",
     "recharts": "^0.21.2",
