--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.9",
-    "semantic-ui-react": "^0.67.1"
+    "semantic-ui-react": "^0.67.1",
+    "store": "^2.0.4"
   }
 }
