--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-waypoint": "^5.2.1",
     "recharts": "^0.21.2",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui": "^2.2.9",
     "semantic-ui-react": "^0.67.1",
