--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-infinite": "^0.10.0",
+    "react-infinite-scroller": "^1.0.12",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
     "react-spinkit": "^2.1.1",
