--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.4.2",
+    "react-cropper": "^0.12.0",
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.13.3",
+    "react-image-crop": "^2.0.5",
     "react-infinite": "^0.10.0",
     "react-infinite-scroller": "^1.0.12",
     "react-redux": "^5.0.4",
