--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "qrcode.react": "^0.7.2",
     "react": "^15.4.2",
     "react-cropper": "^0.12.0",
     "react-css-modules": "^4.1.0",
