--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-image-crop": "^2.0.5",
     "react-infinite": "^0.10.0",
     "react-infinite-scroller": "^1.0.12",
+    "react-rating": "^0.9.1",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
     "react-spinkit": "^2.1.1",
