--- a/package.json
+++ b/package.json
@@ -56,12 +56,11 @@
     "react-image-crop": "^2.0.5",
     "react-infinite": "^0.10.0",
     "react-infinite-scroller": "^1.0.12",
-    "react-rating": "^0.9.1",
+    "react-rater": "^0.4.8",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
     "react-spinkit": "^2.1.1",
     "react-star-rating-component": "^1.2.4",
-    "react-virtualized": "^9.4.1",
     "recharts": "^0.22.4",
     "redux": "^3.6.0",
     "redux-persist": "^4.8.0",
