--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-infinite": "^0.10.0",
     "react-infinite-scroller": "^1.0.12",
     "react-notification-system": "^0.2.16",
+    "react-notification-system-redux": "^1.2.0",
     "react-rater": "^0.4.8",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
