--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-infinite-scroller": "^1.0.12",
     "react-notification-system": "^0.2.16",
     "react-notification-system-redux": "^1.2.0",
+    "react-quill": "^1.2.2",
     "react-rater": "^0.4.8",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
