--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.3",
+    "react-ga": "^2.4.1",
     "react-image-crop": "^2.0.5",
     "react-infinite": "^0.10.0",
     "react-infinite-scroller": "^1.0.12",
