--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-rater": "^0.4.8",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.0.0",
+    "react-sortable-hoc": "^0.6.8",
     "react-spinkit": "^2.1.1",
     "react-star-rating-component": "^1.2.4",
     "recharts": "^0.22.4",
